// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner that has basic information 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="24"
      applicationContent={null}
      color="auto"
      dateOfBirth="March 30, 2017"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="F"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="Terra Demographics Banner"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
  tiny={
    <_default
      age="24"
      applicationContent={null}
      color="auto"
      dateOfBirth="March 30, 2017"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="F"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="Terra Demographics Banner"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
/>
`;

exports[`renders a blank banner properly 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
  tiny={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
/>
`;

exports[`renders gestational date with a default label when the label is not provided 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge="April 5, 2016"
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
  tiny={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge="April 5, 2016"
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
/>
`;

exports[`renders post menstrural date with a default label when the label is not provided 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge="April 5, 2016"
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
  tiny={
    <_default
      age="--"
      applicationContent={null}
      color="auto"
      dateOfBirth="--"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="--"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="--"
      postMenstrualAge="April 5, 2016"
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
/>
`;

exports[`renders the banner appropriately for a deceased person 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="24"
      applicationContent={null}
      color="auto"
      dateOfBirth="June 15, 2014"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate="March 30, 2017"
      deceasedDateLabel="Deceased"
      gender="F"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="Old Terra Demographics Banner"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
  tiny={
    <_default
      age="24"
      applicationContent={null}
      color="auto"
      dateOfBirth="June 15, 2014"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate="March 30, 2017"
      deceasedDateLabel="Deceased"
      gender="F"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={Object {}}
      isAriaHidden={false}
      personName="Old Terra Demographics Banner"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName={null}
    />
  }
/>
`;

exports[`renders the banner appropriately for a person with gestational and post menstrual dates 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge="April 5, 2016"
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge="April 7, 2016"
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
  tiny={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge="April 5, 2016"
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge="April 7, 2016"
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
/>
`;

exports[`renders the banner properly for a deceased person with additional application content 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate="March 5, 2016"
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
  tiny={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate="March 5, 2016"
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
/>
`;

exports[`renders the banner that contains additional information 1`] = `
<ResponsiveElement
  responsiveTo="parent"
  small={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
  tiny={
    <_default
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      color="auto"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Date of Birth"
      dateOfBirthLabel="DOB"
      deceasedDate={null}
      deceasedDateLabel="Deceased"
      gender="Male"
      gestationalAge={null}
      gestationalAgeFullText="Gestational Age"
      gestationalAgeLabel="GA"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge={null}
      postMenstrualAgeFullText="Post Menstrual Age"
      postMenstrualAgeLabel="PMA"
      preferredFirstName="John"
    />
  }
/>
`;
